# openenv-code-review-arena

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy-space.yml
server/: Dockerfile  __init__.py  app.py  code_review_environment.py  grader.py  requirements.txt  task_data.py  task_store.py  task_types.py
tests/: test_environment.py  test_grader.py
